# RagTube

./: .gitignore  README
backend/: .gitignore  database.py  main.py  pyproject.toml
backend/db_models/: sessions.py  urls.py  users.py
backend/prompts/: chat_state.yaml
backend/pydantic_models/: chat.py  user_sessions.py  users.py  vector_db.py
backend/routers/: chat.py  urls.py  users.py  vector_db.py
backend/services/: audio_helpers.py  dependencies.py  helpers.py  langgraph.py  vector_db.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: markdown_renderer.tsx  navbar.tsx  progress_bar.tsx  protected_route.tsx
frontend/src/context/: auth_context.tsx
frontend/src/pages/: chat.tsx  home.tsx  login.tsx  my_links.tsx  register.tsx
