[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.3",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "ipython>=9.10.0",
    "langchain>=1.2.9",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.9",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "moviepy>=2.2.1",
    "numba>=0.59.0",
    "openai-whisper>=20250625",
    "spacy>=3.8.11",
    "sqlalchemy>=2.0.46",
    "yt-dlp>=2026.2.4",
]
